--- a/redeyes.html
+++ b/redeyes.html
@@ -3,39 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>襍､縺?楜</title>
-    <meta name="contained" content="noindex">
-<style type="text/css">
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-         
-                body {
+       <meta name="contained" content="noindex">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+        body {
             background-color: black;
             color: #00FF00;
             font-family: 'Press Start 2P', monospace;
             overflow: hidden;
         }
 
-        .red-mode {
-            background-color: black;
-            color: red;
-        }
-
-        .glitch {
-            color: #FF0000;
-            animation: glitch 1s infinite alternate;
-            white-space: pre-wrap;
-        }
-
-        @keyframes glitch {
-            0% { transform: translate(2px, 2px) skew(0.5deg); opacity: 1; }
-            20% { transform: translate(-2px, -2px) skew(0.5deg); opacity: 0.8; }
-            40% { transform: translate(1px, 1px) skew(0.2deg); opacity: 1; }
-            60% { transform: translate(-1px, -1px) skew(0.3deg); opacity: 0.8; }
-            80% { transform: translate(2px, -2px) skew(0.4deg); opacity: 1; }
-            100% { transform: translate(-2px, 2px) skew(0.5deg); opacity: 0.8; }
-        }
-
         #innerdiv {
             display: none;
+            white-space: pre-wrap;
         }
 
         button {
@@ -46,65 +27,86 @@
             cursor: pointer;
         }
 
-        button.red-mode {
-            background-color: red;
+        button:hover {
+            background-color: #00CC00;
         }
 
-        button:hover {
-            background-color: #00FF00;
+        .glitch {
+            color: #FF0000;
+            animation: glitch 0.1s infinite alternate;
+            white-space: pre-wrap;
+            font-weight: bold;
+        }
+
+        @keyframes glitch {
+            from { transform: translate(0); }
+            to { transform: translate(1px, -1px); }
         }
     </style>
 </head>
 <body>
-    <div id="div1">
-        <div id="messageBox">
-            <strong class="no-glitch">新しいメッセージが（１）通あります！</strong><br>
-            <button type="button" class="no-glitch" onclick="go()">確認する</button>
-            <div id="innerdiv" style="display:none;"></div>
+    <div>
+        <div>
+            <strong>新しいメッセージが（1）通あります！</strong><br>
+            <button type="button" onclick="go()">確認する</button>
+            <div id="innerdiv">
+================================================================================<br>
+2025年2月30日 23:10:51 作成 外峯 零<br>
+================================================================================<br>
+荒ら屋暮らしの頃は覚えてるだけ無駄らしい？<br>
+それってさ、ちょっと酷い話だと思わないこと？<br>
+ずっとお世話になった荒ら屋も可哀想だし。<br>
+私に『廃墟の歌姫』という渾名が付いたのも此処のお陰だし。<br>
+この街に来てから偶に訪ねたりするの。<br>
+だって此処は、存在しなくなったモノが集まる街だから。<br>
+市街というか、死骸ね。<br>
+無駄だなんて思いたくないわ。<br>
+            </div>
         </div>
     </div>
 
-    <script type="text/javascript">
-        var time = 1000; // 更新間隔(ms)
-        var counter = 0;
-        var maxChanges = 20; // 変化の回数
-        var redPhase = false;
-        var redPhaseStart = 10; // 赤モード突入
-        var intervalID = null;
+    <script>
+        const ICU = ["赤", "瞳", "視", "てる"];
+        let invasionInterval;
 
         function go() {
-            document.getElementById("innerdiv").style.display = "block"; 
-            intervalID = setInterval(Change, time);
+            document.getElementById("innerdiv").style.display = "block";
+            setTimeout(startInvasion, 8000);
+            setTimeout(startTyping, 16000);
+            setTimeout(showEnding, 25000);
         }
 
-        function Change() {
-            var element = document.getElementById("innerdiv");
+        function startInvasion() {
+            invasionInterval = setInterval(() => {
+                const el = document.getElementById("innerdiv");
+                const txt = el.innerHTML.replace(/<br>/g, "\\n").split("");
+                const count = Math.max(1, Math.floor(txt.length * 0.02)); // 徐々に増える
 
-            // 「赤め視てる」がどんどん増える
-            var message = "";
-            for (var i = 0; i < counter; i++) {
-                message += "赤め視てる";
-                if (i % 4 === 3) message += "<br>"; // 4回ごとに改行
-            }
-
-            element.innerHTML = message;
-
-            if (!redPhase && counter >= redPhaseStart) {
-                document.body.classList.add("red-mode");
-                document.querySelector("button").classList.add("red-mode");
-                redPhase = true;
-            }
-
-            counter++;
-
-            if (counter >= maxChanges) {
-                clearInterval(intervalID);
-                EndMessage();
-            }
+                for (let i = 0; i < count; i++) {
+                    const p = Math.floor(Math.random() * txt.length);
+                    if (!["\\n", "="].includes(txt[p])) {
+                        txt[p] = ICU[Math.floor(Math.random() * ICU.length)];
+                    }
+                }
+                el.innerHTML = txt.join("").replace(/\\n/g, "<br>");
+            }, 500);
         }
 
-        function EndMessage() {
-            document.getElementById("innerdiv").innerHTML = "<div class='glitch' style='font-weight: bold;'>よっぽど憶えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
+        function startTyping() {
+            clearInterval(invasionInterval);
+            const el = document.getElementById("innerdiv");
+            el.innerHTML = "";
+            let t = "";
+            for (let i = 0; i < 200; i++) {
+                t += "赤瞳視てる";
+                if (i % 20 === 0) t += "<br>";
+            }
+            el.innerHTML = "<div class='glitch'>" + t + "</div>";
+        }
+
+        function showEnding() {
+            const el = document.getElementById("innerdiv");
+            el.innerHTML = "<div class='glitch'>よっぽど覚えられたいらしい、随分と変わったお方だこと。<br>良いでしょう、おぼえておくね。</div>";
         }
     </script>
 </body>
